--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.2.13",
+    "npm": "^10.9.0",
     "react": "^18",
     "react-dom": "^18",
     "react-social-icons": "^6.18.0"
